--- a/web/index.html
+++ b/web/index.html
@@ -14,6 +14,16 @@
     <input type="submit"  value="OK!" name="submit"/>
 </form>
 
+<h2> Регистрируемся </h2>
+
+<form action="rest/Registration" method="POST">
+    login: <input type="text" name="login"><br>
+    enter password: <input type="text" name="passwordOne"><br>
+    reenter password: <input type="text" name="passwordTwo"><br>
+    enter email:<input type="text" name = "email">
+    <input type="submit"  value="OK!" name="submit"/>
+</form>
+
 
 </body>
 </html>
