--- a/web/index.html
+++ b/web/index.html
@@ -24,6 +24,14 @@
     <input type="submit"  value="OK!" name="submit"/>
 </form>
 
+<h1>Пробуем грузить файлы</h1>
+
+<form action="UploadDownloadFileServlet" method="post" enctype="multipart/form-data">
+    Select File to Upload:<input type="file" name="fileName">
+    <br>
+    <input type="submit" value="Upload">
+</form>
+
 
 </body>
 </html>
