--- a/web/index.html
+++ b/web/index.html
@@ -30,6 +30,12 @@
     Select File to Upload:<input type="file" name="fileName">
     <br>
     <input type="submit" value="Upload">
+
+
+</form>
+<br>
+<form action="rest/exit" method="GET" >
+    <input type="submit" value="CLEAN cookies">
 </form>
 
 
