--- a/web/index.html
+++ b/web/index.html
@@ -38,6 +38,11 @@
     <input type="submit" value="CLEAN cookies">
 </form>
 
+<h2> если Вы забыли пароль, введите свой имейл </h2>
+<form action="rest/pwd" method="GET">
+    email: <input type="text" name="email"><br>
+    <input type="submit"  value="Send" name="submit"/>
+</form>
 
 </body>
 </html>
