--- a/web/index.html
+++ b/web/index.html
@@ -24,6 +24,7 @@
 			<div class="header__menu">
 				<ul>
                     <li ng-show="logined"><a href="#/profile/exit">Logout</a></li>
+                    <li ng-show="logined"><a href="#/audio/upload">Upload Audio Track</a></li>
 					<li ng-hide="logined"><a href="#/profile/reg">Create new account</a></li>
 					<li ng-hide="logined"><a href="#/profile/signin" class="login-anchor">Sign in</a></li>
 				</ul>
@@ -33,20 +34,15 @@
 	<div class="header__search_wrapper">
 		<div class="header__search container">
             <form action="" class="search-form">
-                <input id="search-text" type="text" placeholder="SEARCH">
+                <input id="search-text" type="text" placeholder="SEARCH" ng-model="searchQuery" ng-keyup="search(searchQuery);" ng-enter="search(searchQuery);">
+                {{search.searchQuery}}
             </form>
 		</div>
 	</div>
 	<div class="main container clearfix">
 		<div class="content">
-			<h1 class="h1">Play and buy good music</h1>
-			<ul class="sort">sort by
-				<li>Price</li>
-				<li>Rating</li>
-			</ul>
-            <div id="content-music">
-                <ng-view></ng-view>
-            </div>
+			<ng-view></ng-view>
+
 			<!-- music -->
 		</div>
 		<div class="sidebar">
@@ -73,16 +69,8 @@
 	</footer>
 
     <div id="player">
+        Player // Когда нибудь здесь будут крутые стили...
         <audio></audio>
-    </div>
-
-
-    <div class="popup">
-        <form class="login" action="/rest/Login" method="POST">
-            <input type="text" name="login"><br>
-            <input type="password" name="password"><br>
-            <input type="submit" value="Login"><br>
-        </form>
     </div>
 
 
