worked Upload (again) and Edit FIles

--- a/web/index.html
+++ b/web/index.html
@@ -27,7 +27,8 @@
                     <li ng-show="logined"><a href="#/audio/upload">Upload Audio Track</a></li>
 					<li ng-hide="logined"><a href="#/profile/reg">Create new account</a></li>
 					<li ng-hide="logined"><a href="#/profile/signin" class="login-anchor">Sign in</a></li>
-				</ul>
+				    <li ng-hide="logined"><a href="/#profile/user/Вася">Profile</a></li>
+                </ul>
 			</div>
 		</div>
 	</header>
