Friday finally commit

--- a/web/index.html
+++ b/web/index.html
@@ -27,7 +27,7 @@
                     <li ng-show="logined"><a href="#/audio/upload">Upload Audio Track</a></li>
 					<li ng-hide="logined"><a href="#/profile/reg">Create new account</a></li>
 					<li ng-hide="logined"><a href="#/profile/signin" class="login-anchor">Sign in</a></li>
-				    <li ng-hide="logined"><a href="/#profile/user/Вася">Profile</a></li>
+				    <li ng-show="logined"><a href="/#profile/edit">Profile</a></li>
                 </ul>
 			</div>
 		</div>
