Pre-Release commit

--- a/web/index.html
+++ b/web/index.html
@@ -6,8 +6,12 @@
 	<link href='http://fonts.googleapis.com/css?family=Lobster&amp;subset=latin,cyrillic-ext' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/all.css">
+	<link rel="stylesheet" href="css/alertify.core.css">
+	<link rel="stylesheet" href="css/alertify.default.css">
 	<script src="js/jquery.js"></script>
-    <script src="http://malsup.github.com/jquery.form.js"></script>
+    <script src="js/jquery.form.js"></script>
+    <script src="js/dropzone.js"></script>
+    <script src="js/alertify.js"></script>
     <script src="js/angular.min.js"></script>
     <script src="js/ng-route.js"></script>
     <script src="js/angular-animate.min.js"></script>
